--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "YearnWatch",
-  "name": "YearnWatch. V2 Vaults and Strategies Info",
+  "short_name": "RoboVault Watch",
+  "name": "RoboVault Watch. V2 Vaults and Strategies Info",
   "icons": [
     {
       "src": "favicon.ico",
